--- a/globalvslocal.yaml
+++ b/globalvslocal.yaml
@@ -19,6 +19,7 @@ paths:
     parameters:
       - $ref: '#/components/parameters/requiredHeader'
     get:
+    post:
       security:
         - OAuth2: [assets, assets.read]
       tags:
