--- a/ablyRangedspec.yaml
+++ b/ablyRangedspec.yaml
@@ -468,15 +468,28 @@ paths:
         - $ref: '#/components/parameters/filterLimit'
         - $ref: '#/components/parameters/filterEnd'
         - $ref: '#/components/parameters/filterDirection'
+      responses:
         default:
-          description: Error
+          description: OK
           headers:
-            x-ably-errorcode:
-              $ref: '#/components/headers/ErrorCode'
-            x-ably-errormessage:
-              $ref: '#/components/headers/ErrorMessage'
+            link:
+              $ref: '#/components/headers/Link'
             x-ably-serverid:
               $ref: '#/components/headers/ServerId'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Message'
+            application/x-msgpack:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Message'
+            text/html:
+              schema:
+                type: string
 
     post:
       summary: Publish a message to a channel
