--- a/ablyRangedspec.yaml
+++ b/ablyRangedspec.yaml
@@ -490,6 +490,49 @@ paths:
             text/html:
               schema:
                 type: string
+        '2XX':
+          description: OK
+          headers:
+            link:
+              $ref: '#/components/headers/Link'
+            x-ably-serverid:
+              $ref: '#/components/headers/ServerId'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Message'
+            application/x-msgpack:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Message'
+            text/html:
+              schema:
+                type: string
+        '200':
+          description: OK
+          headers:
+            link:
+              $ref: '#/components/headers/Link'
+            x-ably-serverid:
+              $ref: '#/components/headers/ServerId'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Notification'
+            application/x-msgpack:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Notification'
+            text/html:
+              schema:
+                type: string        
+
 
     post:
       summary: Publish a message to a channel
